--- a/build.yaml
+++ b/build.yaml
@@ -17,5 +17,5 @@ include:
     shield: mano_left
   - board: seeeduino_xiao_ble
     shield: mano_right
-  - board: seeeduino_xiao_ble
-    shield: settings_reset
+  # - board: seeeduino_xiao_ble
+  #   shield: settings_reset
