--- a/build.yaml
+++ b/build.yaml
@@ -13,9 +13,9 @@
 #
 
 include:
-  - board: seeeduino_xiao_ble
-    shield: mano_left
-  - board: seeeduino_xiao_ble
-    shield: mano_right
-  # - board: seeeduino_xiao_ble
-  #   shield: settings_reset
+  - board: nice_nano_v2
+    shield: corne_left
+  - board: nice_nano_v2
+    shield: corne_right
+  - board: nice_nano_v2
+    shield: settings_reset
